# kortteli-kauppa-stock-checker

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  api-exploration.md  docker-compose.yml  package.json
backend/: .dockerignore  .gitignore  .rubocop.yml  Cargo.toml  Dockerfile  Gemfile  Guardfile  Makefile  README.md  Rocket.toml  api-exploration.md  fly.toml  jest.config.e2e.js  jest.config.e2e.ts  jest.config.int.js  jest.config.js  jest.config.ts  jest.config.unit.js  package.json  tsconfig.build.json  tsconfig.json  wallaby.config.js
backend/__tests__/fixtures/: index.ts  range.ts  simpleProduct.ts  singleCabinetItem.ts  singleCabinetItemAsArray.ts
backend/__tests__/http-server/: shops.e2e.test.ts  (+1 more)
backend/config/: application.rb  credentials.yml.enc  database.yml  routes.rb  version
backend/db/: schema.rb  seeds.rb
backend/migrations/: 1636637564978_create-updated-at-function.js  1636638066310_add-updated-at-trigger-to-shops.js  1636648797615_seed-shops.js  1637145998094_create-raw-inventory-data.js  1637912823827_create-simple-products.js  1638184857802_rename-ean-to-epc-on-simple-products.js  1639491679246_add-archived-flag-to-raw-inventory-data.js  1640174405100_add-seed-new-shop-Kalliolahde.js  20210804103431_create_shops.sql  20210804103545_seed_shops.sql
backend/spec/: rails_helper.rb  spec_helper.rb
backend/src/: cert_helper.rs  database.rs  entrypoint.ts  main.rs  schema.rs  shops.rs
backend/tools/: backfill-production-to-dev.ts  manually-import-inventory-snapshots.ts  migrate-to-aurora.ts  pull-subset-of-data-from-prod.ts
(+263 files in other folders)
