[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]