[package]
name = "kortteli-kauppa-stock-checker-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]